--- a/about.html
+++ b/about.html
@@ -57,9 +57,9 @@
   </div> </center>
   <div class="subzero">
   <center>
-    <a onclick="work()" href="index.html"><div id="work" class="butt">WORK</div></a>
-    <a onclick="about()" href="about.html"><div id="about" class="buttactive">ABOUT</div></a>
-    <a onclick="contact()" href="contact.html"><div id="contact" class="butt">CONTACT</div></a>
+    <a onclick="work()" href="index"><div id="work" class="butt">WORK</div></a>
+    <a onclick="about()" href="about"><div id="about" class="buttactive">ABOUT</div></a>
+    <a onclick="contact()" href="contact"><div id="contact" class="butt">CONTACT</div></a>
   </center>
 </div>
 </div>
