--- a/contact.html
+++ b/contact.html
@@ -57,15 +57,13 @@
   </div> </center>
   <div class="subzero">
   <center>
-    <a onclick="work()" href="index.html"><div id="work" class="butt">WORK</div></a>
-    <a onclick="about()" href="about.html"><div id="about" class="butt">ABOUT</div></a>
-    <a onclick="contact()" href="contact.html"><div id="contact" class="buttactive">CONTACT</div></a>
+    <a onclick="work()" href="index"><div id="work" class="butt">WORK</div></a>
+    <a onclick="about()" href="about"><div id="about" class="butt">ABOUT</div></a>
+    <a onclick="contact()" href="contact"><div id="contact" class="buttactive">CONTACT</div></a>
   </center>
 </div>
 </div>
-<div class=".10px">
-  <p>.<p>.<p>.
-</div>
+<p>
 <center>
 <div class="magic">
   <div class="magictext">
@@ -77,11 +75,14 @@
       </a>
 
      </div>
-<marquee direction="right" scrollamount="5">
-<div class="plane"></div>
+<marquee direction="right" scrollamount="3">
+<p><p><div class="plane"></div>
 </marquee>
-<marquee direction="left" scrollamount="3">
-<div class="plane2"></div>
+<marquee direction="left" scrollamount="4">
+<p><p><div class="plane2"></div>
+</marquee>
+<marquee direction="right" scrollamount="2">
+<p><div class="plane1"></div>
 </marquee>
 </div>
 
