--- a/glance.html
+++ b/glance.html
@@ -56,25 +56,19 @@
         <div class="authorname">
           <p>Raghav Sarin
           <div class="authorbio">10 May 2016<p>
-          Kya aapne kabhi itna cool dude dekha hai?
+          One line isn't enough
         </div>
       </div>
 
 </div>
 
   <div class="blogtxt">
-
-  <p>Jobsplane is a job aggregator which helps people across India find the right jobs and internships for them. We worked with the Jobsplane team on an updated brand identity, a redesign of their website, and on the design for their new mobile app.
-  <div class="blogtitle2">Identity</div>
+<div class="blogtitle2">About the project</div>
+<p>Glance is an app which aims to use the data you provide and on your phone, to provide you with relevant information and updates. We redesigned their entire android app in a hybrid fashion which incorporated the core elements of Material design but also catered to the unique interactions and visual feel they had in mind. The illustrations made for the onboarding all followed the material style. The app targeted a large Hindi audience so we had to make sure that the visual design of the app had the same feel during both English and Hindi use. For this we used the font Ek Mukta which provides uniformity across Hindi and English. The app also had a unique flip interaction used by its cards which allow the user to just tap and view information. We designed the cards in a way to maximise the use of this interaction, taking inspiration from how Google designs its cards.  <div class="blogtitle2">Identity</div>
   <p>The website and branding for Jobsplane had to be modernised without losing the unique look users had become used to. The challenge was to stick with the same red and grey branding as on the jobsplane.com website, and combine it with the material design guidelines to get a cohesive design identity for the app. We made the logo sleeker, and created a color palette based on the colors used in the logo and website. We also worked on a mascot for the brand, which w
 </p><center><img src="/assets/img/jobsplane-logo.png"></center>
 <div class="imgdesc">This is the stuff that we did lol. Hello lorem ipsum.</div>
-<div class="blogtitle2">Website</div>
 
-
-    <p>Username Availability Checker lets you input a username, and <i>almost</i> instantly find out if it’s been taken on Facebook, Twitter, Instagram, Tumblr, Pinterest, Soundcloud and Github. Seriously! <a href="https://username-check.herokuapp.com">Try it out now!</a> No more late nights spent in regret! No more silent tears in the rain! Only one username that you can use anywhere on the internet.
-    </p><center><img src="/assets/img/jobsplane-page2.png"></center>
-    <p>This project was the result of an afternoon spent with my friend <a href="https://github.com/manu-chroma">Manvendra</a> trying to learn Python. We used <a href="http://flask.pocoo.org">Flask</a>, a python framework, to create an API which checks if a username exists on a website. It’s all very clever, and you can read more about it on the <a href="https://github.com/manu-chroma/username-availability-checker">project page on Github</a>.
 </div>
 </div>
 <div class="UItext">Other Projects</div>
