--- a/hitched.html
+++ b/hitched.html
@@ -67,7 +67,7 @@
         <div class="authorname">
           <p>Raghav Sarin
           <div class="authorbio">10 May 2016<p>
-          Kya aapne kabhi itna cool dude dekha hai?
+          One line isn't enough
         </div>
       </div>
 
