--- a/pmo.html
+++ b/pmo.html
@@ -63,13 +63,13 @@
 </div>
 
   <div class="blogtxt">
-	<p>The Prime Ministers Office mobile app was a one of a kind initiative by the Government of India and Google. It is the first offical app for a head of state and its aim was to provide a window to the highest office in the country of India. It begun as a contest held by Google and MyGov( the government of Indias online citizen participation tool ) which saw more than 45,000 ideas sourced and more than 10,000 entries, after which we and our team, were chosen to create the app.    <br></p><center><img src="/assets/img/pmo-app1.png"></center>
-    <div class="blogtitle2">First Design</div>
-<p>Our first design strictly adhered to Googles material design guidelines,as Google required us to do so, and all interactions,animations and illustrations were made in strict accordance to them. Gyan led the design team and we worked with assistance from the UI/UX Head of Google India as well as several senior software engineers. We also had a one day session at Google Hyderabad where we were made of several best practices which we should follow during the design and development of the app. One of our primary challenges was to design a style which maintains the stature of the PMOs office while also having an inclusive and warm feel.Apart from this ,given that the app would be used by such a wide audience, accessibility was also something which we gave a lot of importance, as we followed the various industry standards as well as doing a little bit extra wherever we could. After several months of work and a combination of the preceding factors we finally designed and implemented our first design.      <br></p><center><img src="/assets/img/pmo-app2.png"></center>
-    <div class="blogtitle2">Second Design</div>
-
-	  <p>Following the completion of the design and development it was decided that a few superficial changes were needed to be made in the design style so as to differentiate it from a standard material while retaining the core elements from the previous design. We worked on the redesign with assistance from Creativeland Asia ,a design agency , and also went to work with them for a week at their head office in Mumbai. One of the big changes in the redesign was the use of the font Ek Mukta instead of Roboto. This was because Ek Mukta assured uniformity across Hindi and English which resulted in a better visual feel. Finally 10 languages were integrated into the app. Once completed the changes were implemented and this is the design present in the current Prime Ministers Office app.
-	  </div>
+    <p>Have you ever picked a username online, only to realise ‘animefan’ is already taken on Twitter, Facebook, Instagram and Tumblr? Have you stared in despair at the sign up screen as it tells you you can have animal_fan instead? Yeah, me too. It's the quintessential modern problem. And this right here is a solution.
+    <br></p><center><img src="/assets/img/pmo-app1.png"></center>
+    <div class="blogtitle2">Accessibility</div>
+    <p>Username Availability Checker lets you input a username, and <i>almost</i> instantly find out if it’s been taken on Facebook, Twitter, Instagram, Tumblr, Pinterest, Soundcloud and Github. Seriously! <a href="https://username-check.herokuapp.com">Try it out now!</a> No more late nights spent in regret! No more silent tears in the rain! Only one username that you can use anywhere on the internet.
+      <br></p><center><img src="/assets/img/pmo-app2.png"></center>
+    <p>This project was the result of an afternoon spent with my friend <a href="https://github.com/manu-chroma">Manvendra</a> trying to learn Python. We used <a href="http://flask.pocoo.org">Flask</a>, a python framework, to create an API which checks if a username exists on a website. It’s all very clever, and you can read more about it on the <a href="https://github.com/manu-chroma/username-availability-checker">project page on Github</a>.
+</div>
 </div>
 <hr>
 <div class="UItext">Other Projects</div>
