--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
   </div> </center>
   <div class="subzero">
   <center>
-    <a onclick="work()" href="index.html"><div id="work" class="buttactive">WORK</div></a>
-    <a onclick="about()" href="about.html"><div id="about" class="butt">ABOUT</div></a>
-    <a onclick="contact()" href="contact.html"><div id="contact" class="butt">CONTACT</div></a>
+    <a onclick="work()" href="index"><div id="work" class="buttactive">WORK</div></a>
+    <a onclick="about()" href="about"><div id="about" class="butt">ABOUT</div></a>
+    <a onclick="contact()" href="contact"><div id="contact" class="butt">CONTACT</div></a>
   </center>
 </div>
 </div>
