--- a/mova1.html
+++ b/mova1.html
@@ -63,11 +63,14 @@
 </div>
 
   <div class="blogtxt">
-
-  <p>MOVA1 is an interior architecture and furniture design firm that seeks to promote inventive and polished modern living solutions.
+    <div class="blogtitle2">About the firm</div>
+  <p>MOVA1 is an interior architecture and furniture design firm that creates inventive and polished modern living solutions.
   <div class="blogtitle2">Identity</div>
-</p><center><img src="/assets/img/movalogo.png"></center>
-  <p>The website and branding for Jobsplane had to be modernised without losing the unique look users had become used to. The challenge was to stick with the same red and grey branding as on the jobsplane.com website, and combine it with the material design guidelines to get a cohesive design identity for the app. We made the logo sleeker, and created a color palette based on the colors used in the logo and website. We also worked on a mascot for the brand, which w
+
+  <p>The MOVA1 logo had to represent the structure and minimalism of the brand. This was achieved by using custom type, based on the Arial letterforms.
+  </p><center><img src="/assets/img/movalogo.png"></center>
+
+    <p>The color scheme was chosen to be as sparse as possible - black and a light grey, with a salmon color used sparingly as an accent.
 </p><center><img src="/assets/img/movacard.jpg"></center>
 <div class="imgdesc">This is the stuff that we did lol. Hello lorem ipsum.</div>
 <div class="blogtitle2">Website</div>
