Add raghav and gyan pages

--- a/gyan.html
+++ b/gyan.html
@@ -46,31 +46,22 @@
    </head>
    <body id="index" class="index">
 
-
-<div class="header-home">
-
-
-</div>
 <div class="header-home2">
     <center>  <div id=dis class="zero">
       0DESIGN.CO
   </div> </center>
   <div class="subzero">
   <center>
-    <a onclick="work()" href="index"><div id="work" class="butt">WORK</div></a>
-    <a onclick="about()" href="about"><div id="about" class="buttactive">ABOUT</div></a>
+    <a onclick="work()" href="index"><div id="work" class="buttactive">WORK</div></a>
+    <a onclick="about()" href="about"><div id="about" class="butt">ABOUT</div></a>
     <a onclick="contact()" href="contact"><div id="contact" class="butt">CONTACT</div></a>
   </center>
 </div>
 </div>
-<div class=".10px">
-  <p>.<p>.<p>.
-</div>
-
-<center>
-  <div class="dtext">"Good design is as little design as possible."</div>
-   <div class="dtext2">This quote by Dieter Rams sums up how we think about design. The less someone notices our work, the better it is. Everything should just work, and the user shouldn't have to think. </div>
-  <a href="gyan.html">
+  <center>
+    <div class="zero">
+      <p>.<p>
+        <a href="gyan.html">
 		      <div class="person">
             <center>
             	<img src="assets/img/gyan.jpg" height="160" width="320">
@@ -121,33 +112,63 @@
     </center>
     </div>
 
-  <a href="gyan.html">
-		      <div class="person">
-            <center>
-            	<img src="assets/img/raghav.jpg" height="160" width="320">
-              <div class="name">
-                Raghav Sarin
-              </div>
-              <div class="position">
-                raghav@0design.co
-              </div>
-</a>
-      <a href="https://www.facebook.com/profile.php?id=100005340218205">
-      <button class="hvr-grow-shadow" type="button">
-      <i class="fa fa-facebook-official"></i>
-      </button>
-      </a>
-      <a href="https://www.linkedin.com/in/raghav-sarin-7642386b">
-      <button class="hvr-grow-shadow" type="button">
-      <i class="fa fa-linkedin"></i>
-      </button>
-      </a>
-    </center>
+
     </div>
+      <a href="pmo.html">
+		      <div class="card">
+            	<img src="assets/img/pmo.png" height="160" width="320">
+         	</div>
+</a>
+
+      <a href="mova1.html">
+		      <div class="card">
+            	<img src="assets/img/MOVA1.png" height="160" width="320">
+         	</div>
+</a>
+
+      <a href="jobsplane.html">
+		      <div class="card">
+            	<img src="assets/img/jobsplane.png" height="160" width="320">
+         	</div>
+</a>
+
+      <a href="ioteractions.html">
+		      <div class="card">
+            	<img src="assets/img/ioteractions.png" height="160" width="320">
+         	</div>
+</a>
+
+      <a href="yurii.html">
+		      <div class="card">
+            	<img src="assets/img/yurii.png" height="160" width="320">
+         	</div>
+</a>
+
+      <a href="hackindia.html">
+		      <div class="card">
+            	<img src="assets/img/hackindia.png" height="160" width="320">
+         	</div>
+</a>
+
+      <a href="bic.html">
+		      <div class="card">
+            	<img src="assets/img/BIC Volunteer App.png" height="160" width="320">
+         	</div>
+</a>
+
+      <a href="socialchess.html">
+		      <div class="card">
+            	<img src="assets/img/Social Chess.png" height="160" width="320">
+         	</div>
+</a>
+
+      <a href="surgge.html">
+		      <div class="card">
+            	<img src="assets/img/Surgge.png" height="160" width="320">
+         	</div>
+</a>
 
 </center>
-<div class="spaced">
-</div>
 
   <div class="footer">
    Made with
