--- a/raghav.html
+++ b/raghav.html
@@ -46,49 +46,90 @@
    </head>
    <body id="index" class="index">
 
-
-<div class="header-home">
-
-
-</div>
 <div class="header-home2">
     <center>  <div id=dis class="zero">
       0DESIGN.CO
   </div> </center>
   <div class="subzero">
   <center>
-    <a onclick="work()" href="index"><div id="work" class="butt">WORK</div></a>
+    <a onclick="work()" href="index"><div id="work" class="buttactive">WORK</div></a>
     <a onclick="about()" href="about"><div id="about" class="butt">ABOUT</div></a>
-    <a onclick="contact()" href="contact"><div id="contact" class="buttactive">CONTACT</div></a>
+    <a onclick="contact()" href="contact"><div id="contact" class="butt">CONTACT</div></a>
   </center>
 </div>
 </div>
-<p>
-<div class="magic">
-  <div id='stars'></div>
-   <div id='stars2'></div>
-   <div id='stars3'></div>
-  <div class="magictext">
-      <div class="dtext4">Say hello!</div>
-      <a href="mailto:hello@0design.co" target="_top">
-   <div class="dtext3">
-       hello@0design.co
-        </div>
+  <center>
+    <div class="zero">
+      <p>.<p>
+        <a href="gyan.html">
+		      <div class="person">
+            <center>
+            	<img src="assets/img/raghav.jpg" height="160" width="320">
+              <div class="name">
+                Raghav Sarin
+              </div>
+              <div class="position">
+                raghav@0design.co
+              </div>
+</a>
+      <a href="https://www.facebook.com/profile.php?id=100005340218205">
+      <button class="hvr-grow-shadow" type="button">
+      <i class="fa fa-facebook-official"></i>
+      </button>
       </a>
+      <a href="https://www.linkedin.com/in/raghav-sarin-7642386b">
+      <button class="hvr-grow-shadow" type="button">
+      <i class="fa fa-linkedin"></i>
+      </button>
+      </a>
+    </center>
+    </div>
 
-     </div>
 
-<marquee direction="right" scrollamount="3">
-<p><p><div class="plane"></div>
-</marquee>
-<marquee direction="left" scrollamount="4">
-<p><p><div class="plane2"></div>
-</marquee>
-<marquee direction="right" scrollamount="2">
-<p><div class="plane1"></div>
-</marquee>
-</div>
+    </div>
+    <a href="pmo.html">
+		      <div class="card">
+            	<img src="assets/img/pmo.png" height="160" width="320">
+         	</div>
+</a>
 
+    <a href="glance.html">
+		      <div class="card">
+            	<img src="assets/img/glance.png" height="160" width="320">
+         	</div>
+</a>
+
+    <a href="hitched.html">
+		      <div class="card">
+            	<img src="assets/img/Hitched.png" height="160" width="320">
+         	</div>
+</a>
+
+    <a href="finbox.html">
+		      <div class="card">
+            	<img src="assets/img/finbox.png" height="160" width="320">
+         	</div>
+</a>
+
+    <a href="doubtnut.html">
+		      <div class="card">
+            	<img src="assets/img/Doubtnut.png" height="160" width="320">
+         	</div>
+</a>
+
+    <a href="bic.html">
+		      <div class="card">
+            	<img src="assets/img/BIC Volunteer App.png" height="160" width="320">
+         	</div>
+</a>
+
+    <a href="nadii.html">
+		      <div class="card">
+            	<img src="assets/img/nadii.png" height="160" width="320">
+         	</div>
+</a>
+
+</center>
 
   <div class="footer">
    Made with
