--- a/mova1.html
+++ b/mova1.html
@@ -49,7 +49,7 @@
 <div class="header-fixed"><a href="index.html"><p>Home</a> / <a href="mova1.html">MOVA1</a></div>
   <div class="blogcontainer">
   <div class="blogtitle">MOVA1</div>
-  <div class="blogsubtitle">10 May 2016</div>
+  <div class="blogsubtitle">Interior Architecture</div>
   <div class="author">
         <img src="assets/img/gyan.png">
 
@@ -66,20 +66,17 @@
     <div class="blogtitle2">About the firm</div>
   <p>MOVA1 is an interior architecture and furniture design firm that creates inventive and polished modern living solutions.
   <div class="blogtitle2">Identity</div>
+</p><center><img src="/assets/img/movalogo.png"></center>
 
   <p>The MOVA1 logo had to represent the structure and minimalism of the brand. This was achieved by using custom type, based on the Arial letterforms.
-  </p><center><img src="/assets/img/movalogo.png"></center>
-
     <p>The color scheme was chosen to be as sparse as possible - black and a light grey, with a salmon color used sparingly as an accent.
 </p><center><img src="/assets/img/movacard.jpg"></center>
-<div class="imgdesc">This is the stuff that we did lol. Hello lorem ipsum.</div>
+<div class="imgdesc">Business cards for MOVA1</div>
 <div class="blogtitle2">Website</div>
 
 
-    <p>Username Availability Checker lets you input a username, and <i>almost</i> instantly find out if it’s been taken on Facebook, Twitter, Instagram, Tumblr, Pinterest, Soundcloud and Github. Seriously! <a href="https://username-check.herokuapp.com">Try it out now!</a> No more late nights spent in regret! No more silent tears in the rain! Only one username that you can use anywhere on the internet.
-    </p><center><img src="/assets/img/movasite.png"></center>
+<p>The MOVA1 website acts as a portfolio for the work the firm has done, and also has details about ongoing projects in the live section. The layout was done in accordance with the same principles of structure and minimalism - the red lines run across the page on load, and give the website a unique, wholesome appearance.    </p><center><img src="/assets/img/movasite.png"></center>
     <div class="imgdesc">Visit the website at <a href="http://www.mova1.net.in">www.mova1.net.in</a>.</div>
-    <p>This project was the result of an afternoon spent with my friend <a href="https://github.com/manu-chroma">Manvendra</a> trying to learn Python. We used <a href="http://flask.pocoo.org">Flask</a>, a python framework, to create an API which checks if a username exists on a website. It’s all very clever, and you can read more about it on the <a href="https://github.com/manu-chroma/username-availability-checker">project page on Github</a>.
 </div>
 </div>
 <div class="UItext">Other Projects</div>
