Attempt smooth scrolling

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
 <center>
   <div class="dtext">"Good design is as little design as possible."</div>
    <div class="dtext2">This quote by Dieter Rams sums up how we think about design. The less someone notices our work, the better it is. Everything should just work, and the user shouldn't have to think. </div>
-  <a href="gyan.html">
+  <a href="gyan">
 		      <div class="person">
             <center>
             	<img src="assets/img/gyan.jpg" height="160" width="320">
@@ -121,7 +121,7 @@
     </center>
     </div>
 
-  <a href="gyan.html">
+  <a href="raghav">
 		      <div class="person">
             <center>
             	<img src="assets/img/raghav.jpg" height="160" width="320">
