--- a/contact.html
+++ b/contact.html
@@ -65,9 +65,12 @@
 </div>
 <p>
 <div class="magic">
+  <div class="taare">
   <div id='stars'></div>
    <div id='stars2'></div>
    <div id='stars3'></div>
+ </div>
+
   <div class="magictext">
       <div class="dtext4">Say hello!</div>
       <a href="mailto:hello@0design.co" target="_top">
