--- a/gyan.html
+++ b/gyan.html
@@ -61,7 +61,7 @@
   <center>
     <div class="zero">
       <p>.<p>
-        <a href="gyan.html">
+        <a href="gyan">
 		      <div class="person">
             <center>
             	<img src="assets/img/gyan.jpg" height="160" width="320">
