--- a/raghav.html
+++ b/raghav.html
@@ -61,7 +61,7 @@
   <center>
     <div class="zero">
       <p>.<p>
-        <a href="gyan.html">
+        <a href="raghav">
 		      <div class="person">
             <center>
             	<img src="assets/img/raghav.jpg" height="160" width="320">
