Update Surge + animation on front page

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
 </div>
 <div class="header-home2">
     <center>  <div id=dis class="zero">
-      0DESIGN.CO
+      0DESIGN
   </div> </center>
   <div class="subzero">
   <center>
