--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <script src="assets/js/smooth-scroll.js"></script>
 <div class="header-home2">
     <center>  <div id=dis class="zero">
-      0DESIGN.CO
+      0DESIGN
   </div> </center>
   <div class="subzero">
   <center>
