--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 </div>
 <div class="header-home2">
     <center>  <div id=dis class="zero">
-      0DESIGN.CO
+      0DESIGN
   </div> </center>
   <div class="subzero">
   <center>
@@ -69,7 +69,7 @@
 
 <center>
   <div class="dtext">"Good design is as little design as possible."</div>
-   <div class="dtext2">This quote by Dieter Rams sums up how we think about design. The less someone notices our work, the better it is. Everything should just work, and the user shouldn't have to think. </div>
+   <div class="dtext2">- Dieter Rams<p>This sums up how we feel about design. More than anything else, it must empower the user and make it as simple as possible for them to achieve their goal. Nobody notices good design - because it just works. That is what we aim to do.</div
   <a href="gyan">
 		      <div class="person">
             <center>
